--- a/src/pages/participant-dashboard.astro
+++ b/src/pages/participant-dashboard.astro
@@ -7,6 +7,8 @@ import TeamInfo from "../components/TeamInfo.jsx";
 import ProjectSubmission from "../components/ProjectSubmission.astro";
 import WelcomeMessage from "../components/WelcomeMessage.jsx";
 
+import "../styles/ParticipantDashboard.css";
+
 const title = "Participant Dashboard";
 ---
 
