fix flex centering issue in webkit

--- a/src/pages/forgot-password.astro
+++ b/src/pages/forgot-password.astro
@@ -72,6 +72,7 @@ import Layout from "../layouts/Layout.astro";
     display: flex;
     justify-self: center;
     align-self: center;
+    justify-content: center;
   }
 
   .input-row {
