--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -246,6 +246,9 @@ const showCaseStudies = currentDate < targetDate;
 
   /* timeline */
   .timeline {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     justify-items: center;
     width: 100%;
@@ -255,6 +258,9 @@ const showCaseStudies = currentDate < targetDate;
 
   /* FAQ */
   .faq {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     justify-items: center;
     width: 100%;
