--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -185,6 +185,7 @@ import Layout from "../layouts/Layout.astro";
     display: flex;
     justify-self: center;
     align-self: center;
+    justify-content: center;
   }
 
   .input-row {
