--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -144,6 +144,7 @@ import Layout from "../layouts/Layout.astro";
     display: flex;
     justify-self: center;
     align-self: center;
+    justify-content: center;
   }
 
   .input-row {
