--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -102,7 +102,7 @@ import Layout from "../layouts/Layout.astro";
                     getDoc(doc(db, "admin", user.uid))
                       .then((ref) => {
                         if (ref.exists()) {
-                          window.location.href = "/admin-dashboard";
+                          window.location.href = "/admin";
                         } else {
                           Swal.fire({
                             icon: 'error',
