implement session functionality

--- a/src/pages/judge-dashboard.astro
+++ b/src/pages/judge-dashboard.astro
@@ -18,12 +18,17 @@ import JudgeDashboardParent from "../components/JudgeDashboardParent";
 <script>
   import { doc, getDoc } from "firebase/firestore";
   import { auth, db } from "../firebase";
+import { checkSessionExpired } from "../controller/controller";
   
     document.addEventListener('DOMContentLoaded', function() {
       auth.onAuthStateChanged((user) => {
         if (!user) {
           window.location.href = "/login";
         } else {
+          if (checkSessionExpired()) {
+            alert("Your session has expired. Please login again.");
+            window.location.href = "/login";
+          }
           getDoc(doc(db, "judges", user.uid)).then((doc) => {
             if (!doc.exists()) {
               alert("You are not authorized to access this page!");
