--- a/src/pages/participant-dashboard.astro
+++ b/src/pages/participant-dashboard.astro
@@ -28,7 +28,7 @@ const title = "Participant Dashboard";
 <script>
 import { doc, getDoc } from "firebase/firestore";
 import { auth, db } from "../firebase";
-import { checkSessionExpired } from "../controller/controller";
+import { checkSessionExpired, refreshSession } from "../controller/controller";
 
   document.addEventListener('DOMContentLoaded', function() {
     auth.onAuthStateChanged((user) => {
@@ -44,6 +44,7 @@ import { checkSessionExpired } from "../controller/controller";
             alert("You are not authorized to access this page!");
             window.location.href = "/login";
           }
+          refreshSession();
         });
       }
     });
