Standardise "name" -> "title" in project

--- a/src/components/ProjectSubmission.astro
+++ b/src/components/ProjectSubmission.astro
@@ -145,7 +145,7 @@ import "../styles/ProjectSubmission.css";
 
           submissionContent.innerHTML = `
           <h2>Case Study ${caseStudyData.id}: ${caseStudyData.title}</h2>
-          <h3>Project Name: ${projectData.name}</h3>
+          <h3>Project Name: ${projectData.title}</h3>
           <p>${projectData.description}</p>
           <p><b>Uploaded Slide File: </b>${projectData.slideFileName}</p>
           <p><b>Video Link: </b>${projectData.ytLink}</p>
