Apply Prettier on Code

--- a/src/styles/Winner.css
+++ b/src/styles/Winner.css
@@ -111,29 +111,29 @@ a {
 }
 
 .runner-up {
-    background-color: white;
-    color: black;
-    padding: 20px;
-    border-radius: 20px;
-    min-height: 400px;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    overflow: hidden;
-    opacity: 0;
-    animation: fadeInTop 1s ease-in forwards;
-    animation-delay: 0.5s;
-  }
+  background-color: white;
+  color: black;
+  padding: 20px;
+  border-radius: 20px;
+  min-height: 400px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  overflow: hidden;
+  opacity: 0;
+  animation: fadeInTop 1s ease-in forwards;
+  animation-delay: 0.5s;
+}
 
 /* Runner-up Section */
 .runner-up-places {
-    display: flex;
-    justify-content: center;
-    width: 80%;
-    gap: 20px;
-    margin: 0 auto 20px;
-  }
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  gap: 20px;
+  margin: 0 auto 20px;
+}
 
 .carousel-wrapper {
   opacity: 0;
@@ -163,18 +163,20 @@ a {
   transform: scale(1.03);
 }
 
-.winner-content, .runner-up-content {
-    display: flex;
-    flex-direction: row; /* Stack items vertically */
-    align-items: center; /* Center align items */
-    justify-content: space-around; /* Align content centrally */
-    flex-wrap: wrap;
-    gap: 5%;
-    width: 100%;
-    max-width: 1200px;
+.winner-content,
+.runner-up-content {
+  display: flex;
+  flex-direction: row; /* Stack items vertically */
+  align-items: center; /* Center align items */
+  justify-content: space-around; /* Align content centrally */
+  flex-wrap: wrap;
+  gap: 5%;
+  width: 100%;
+  max-width: 1200px;
 }
 
-.winner-image, .runner-up-image {
+.winner-image,
+.runner-up-image {
   position: relative;
   width: 40%;
   height: auto;
@@ -244,9 +246,6 @@ a {
 .medal-icon.bronze {
   color: #cd7f32;
 }
-
-
-
 
 .runner-up-label {
   font-size: 2rem;
@@ -388,17 +387,20 @@ a {
 
 @media (max-width: 1280px) {
   /* Runner-up Section: Adjust layout for smaller screens */
-  .runner-up-content, .winner-content {
+  .runner-up-content,
+  .winner-content {
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center align items */
   }
 
-  .runner-up-image, .winner-image {
+  .runner-up-image,
+  .winner-image {
     width: 100%; /* Full width for the image */
     margin-bottom: 20px; /* Add spacing below the image */
   }
 
-  .runner-up-description, .winner-description {
+  .runner-up-description,
+  .winner-description {
     text-align: center; /* Center align the text */
     width: 100%; /* Full width for the description */
   }
